--- a/package.json
+++ b/package.json
@@ -47,8 +47,12 @@
     "fork-ts-checker-webpack-plugin": "^6.2.13",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "lint-staged": "^11.1.1",
+    "node-sass": "^6.0.1",
     "prettier": "^2.3.2",
+    "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
