--- a/package.json
+++ b/package.json
@@ -24,19 +24,25 @@
     "@babel/runtime": "^7.14.8",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/copy-webpack-plugin": "^8.0.1",
+    "@types/hard-source-webpack-plugin": "^1.0.3",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/webpack-dev-server": "^3.11.5",
+    "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
+    "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "conventional-changelog-cli": "^2.1.1",
+    "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-promise": "^5.1.0",
@@ -44,13 +50,19 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-unicorn": "^34.0.1",
     "eslint-webpack-plugin": "^3.0.1",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.13",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "lint-staged": "^11.1.1",
     "node-sass": "^6.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^6.1.1",
+    "postcss-normalize": "^10.0.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
@@ -62,10 +74,12 @@
     "stylelint-order": "^4.1.0",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
+    "url-loader": "^4.1.1",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "webpackbar": "^5.0.0-3"
   },
   "husky": {
     "hooks": {
