--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint-stylelint": "stylelint --config .stylelintrc.js src/**/*.{less,css,scss}",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "start": "webpack serve --config scripts/config/webpack.dev.config.ts",
-    "build": "NODE_ENV=production webpack --config scripts/config/webpack.prod.config.ts"
+    "build": "NODE_ENV=production npx webpack --config scripts/config/webpack.prod.config.ts"
   },
   "keywords": [],
   "author": "Jerry",
@@ -24,10 +24,16 @@
     "@babel/runtime": "^7.14.8",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/clean-webpack-plugin": "^0.1.3",
     "@types/copy-webpack-plugin": "^8.0.1",
-    "@types/hard-source-webpack-plugin": "^1.0.3",
+    "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/html-webpack-plugin": "^3.2.6",
+    "@types/mini-css-extract-plugin": "^2.0.1",
+    "@types/optimize-css-assets-webpack-plugin": "^5.0.4",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "@types/terser-webpack-plugin": "^5.0.4",
+    "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-server": "^3.11.5",
     "@types/webpack-env": "^1.16.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
@@ -52,18 +58,21 @@
     "eslint-webpack-plugin": "^3.0.1",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.13",
-    "hard-source-webpack-plugin": "^0.13.1",
+    "glob": "^7.1.7",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
     "lint-staged": "^11.1.1",
+    "mini-css-extract-plugin": "^2.1.0",
     "node-sass": "^6.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.1.1",
     "postcss-normalize": "^10.0.0",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.3.2",
+    "purgecss-webpack-plugin": "^4.0.3",
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "stylelint": "^13.13.1",
@@ -72,10 +81,12 @@
     "stylelint-config-standard": "^22.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.4.0",
     "stylelint-order": "^4.1.0",
+    "terser-webpack-plugin": "^5.1.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.46.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0",
@@ -99,6 +110,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
