--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,9 +15,9 @@
     "resolveJsonModule": true,                // 支持导入 json 模块
     "baseUrl": "./",                          // 根路径
     "paths": {																// 路径映射，与 baseUrl 关联
-      "Src/*": ["src/*"],
-      "Components/*": ["src/components/*"],
-      "Utils/*": ["src/utils/*"]
+      "src/*": ["src/*"],
+      "components/*": ["src/components/*"],
+      "utils/*": ["src/utils/*"]
     },
 
     // 实验性选项
