--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "*.{ts,tsx,js,json,html,yml,css,less,scss,md}": [
       "prettier --write",
       "eslint",
-      "stylelint",
+      "stylelint  --config .stylelintrc.js",
       "git add"
     ]
   },
