--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     ],
     "*.{ts,tsx,js,json,html,yml,css,less,scss,md}": [
       "prettier --write",
+      "eslint",
       "git add"
     ]
   },
